--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,6 @@
 }
 
 body, html {
-  margin: 0;
-  padding: 0;
   width: 100%;
   height: 100%;
 }
@@ -29,7 +27,7 @@ header, footer, section, div {
 }
 
 .header {
-  width: 100%;
+  width: 97%;
 /*  height: 100px;*/
   display: flex;
   flex-flow: wrap;
@@ -47,7 +45,12 @@ header, footer, section, div {
 }
 
 .logo_image {
-  width: 76.8px;
+  width: 100px;
+  position: relative;
+  left: 10px;
+  top: 5px;
+/*  border-radius: 50%;
+  background-color: white;*/
 }
 
 
@@ -55,15 +58,17 @@ header, footer, section, div {
   width: 100%;
   display: flex;
   flex-flow: wrap;
+  justify-content: center;
 }
 
 .hero {
-  width: 100%;
+  width: 95%;
   padding: 20px 0px;
 }
 
 .hero_image {
   width: 100%;
+  border-radius: 15px;
 }
 
 .myProjects {
@@ -86,13 +91,43 @@ header, footer, section, div {
 
 .project_thumbnail {
   width: 100%;
+  border-radius: 15px;
 }
 
-.description {
+.description a {
+  padding: 1.5em 0;
+}
+
+/*.description {
   background-color: rgba(0, 0, 0, 0.5);
   position: relative;
   bottom: 47px;
   padding: 5px 5px;
   color: #fff;
+}*/
 
+@media screen and (max-width: 750px) {
+  .project {
+    width: 45%
+  }
 }
+
+@media screen and (max-width: 550px) {
+  .project {
+    width: 95%;
+    height: 200px;
+  }
+
+  .thumbnail_container {
+    height: 150px;
+    overflow: hidden;
+    border-radius: 15px;
+  }
+}
+
+@media screen and (min-width: 850px) {
+  body {
+    width: 850px;
+    margin-left: auto;
+    margin-right: auto;
+  }
