--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,10 @@ body, html {
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 12px;
   color: #424242;
   padding: 0 30px;
-/*  display: flex;
-  flex-flow: wrap;*/
 }
 
 h1, h2, h3, h4, h5 {
@@ -28,7 +26,6 @@ header, footer, section, div {
 
 .header {
   width: 97%;
-/*  height: 100px;*/
   display: flex;
   flex-flow: wrap;
 }
@@ -49,8 +46,6 @@ header, footer, section, div {
   position: relative;
   left: 10px;
   top: 5px;
-/*  border-radius: 50%;
-  background-color: white;*/
 }
 
 
@@ -97,14 +92,6 @@ header, footer, section, div {
 .description a {
   padding: 1.5em 0;
 }
-
-/*.description {
-  background-color: rgba(0, 0, 0, 0.5);
-  position: relative;
-  bottom: 47px;
-  padding: 5px 5px;
-  color: #fff;
-}*/
 
 @media screen and (max-width: 750px) {
   .project {
